// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Auctioneer redux duck tests User load auction data 1`] = `
Array [
  Object {
    "bids": Array [
      Object {
        "name": "Me",
        "value": 75,
      },
    ],
    "description": "Hello",
    "id": 45,
    "title": "Boo",
    "viewDetails": false,
  },
]
`;

exports[`Auctioneer redux duck tests User load auction data 2`] = `
Array [
  Object {
    "bids": Array [
      Object {
        "name": "Me",
        "value": 75,
      },
    ],
    "description": "Hello",
    "id": 45,
    "title": "Boo",
    "viewDetails": false,
  },
  Object {
    "bids": Array [
      Object {
        "name": "You",
        "value": 75,
      },
    ],
    "description": "Hi again",
    "id": 50,
    "title": "Bee",
    "viewDetails": false,
  },
]
`;
